# terratrucer-rust

./: .gitignore  README.md  VOICE_ASSISTANT_SETUP.md  package-lock.json  requirements.txt
backend/: Cargo.toml  ERROR_CODES.md
backend/src/: main.rs
backend/src/models/: cache_entries.rs  mod.rs  search_history.rs
backend/src/routes/: ai_chat.rs  api_proxy.rs  health.rs  mod.rs  search.rs
client/: .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/api/: perplexity.js
client/src/: App.jsx  index.css  main.jsx
client/src/components/: Navbar.jsx
client/src/components/Analytics/: ComparisonView.jsx  EconomicDashboard.jsx  InvestmentCalculator.jsx  RecentHistory.jsx  VisualMetrics.jsx
client/src/components/Charts/: HistoricalCharts.jsx
client/src/components/Chat/: Chatbot.jsx
client/src/components/Insights/: FacilitiesDisplay.jsx  InsightsPanel.jsx  RiskGauge.jsx  RiskMetricCard.jsx  RiskRadarChart.jsx
client/src/components/Layout/: DashboardLayout.jsx
client/src/components/Map/: MapView.jsx
client/src/context/: AnalysisContext.jsx  AuthContext.jsx  ComparisonContext.jsx  PortfolioContext.jsx  ThemeContext.jsx
client/src/pages/: Analyze.jsx  Calendar.jsx  Dashboard.jsx  Home.jsx  Login.jsx  NotFound.jsx  ServerError.jsx  Settings.jsx  Signup.jsx
client/src/services/: VoiceAgent.js  api.js  geocoding.js  mcpClient.js  ocrService.js  supabase.js
client/src/utils/: cookieUtils.js  currencyUtils.js  designUtils.js
(+6 files in other folders)
